# emo-face

./: .dockerignore  .env.example  DEPLOYMENT.md  DOCKER.md  Dockerfile  README.md  app.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  restart.sh  stop.sh
templates/: index.html
