[project]
name = "app"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "google-generativeai==0.3.2",
    "gunicorn==21.2.0",
    "httpx==0.27.0",
    "openai==1.51.2",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "structlog==23.2.0",
    "werkzeug>=3.1.3",
]
