[project]
name = "app"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "distro==1.9.0",
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "google-ai-generativelanguage==0.4.0",
    "google-api-core==2.25.0",
    "google-auth==2.40.3",
    "google-generativeai==0.3.2",
    "gunicorn==21.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "markupsafe==3.0.2",
    "openai==1.51.2",
    "packaging==25.0",
    "protobuf==4.25.8",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "sniffio==1.3.1",
    "structlog==23.2.0",
    "tqdm==4.67.1",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "urllib3==2.4.0",
    "werkzeug==3.1.3",
]
